Test refactor
Reintegrated with updated Check library
Less use of Abstract prefix for classes
Made methods final in template classes
Removed pointless Matrix4
Removed pointless sealed hierarchies
Refactored ray intersections (again)
Removed allocation service from unrelated logical device (TODO)
Removed nasty abstract test
Replaced with mock or concrete implementations as appropriate